# vkRaster

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
public/vkRaster/: Program.hpp  Renderer.hpp  ResourceManager.hpp  types.hpp  vkRaster.hpp
res/: CMakeLists.txt
res/models/: lots_ducks.glb  test.glb  test2.glb
res/shaders/: blitScreen.frag  blitScreen.frag.spv  blitScreen.vert  blitScreen.vert.spv  dispatcher.comp  dispatcher.comp.spv  lightCulling.comp  lightCulling.comp.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  test.frag  test.frag.spv  test.vert  test.vert.spv
src/: CMakeLists.txt  PackedArray.inl  Program.cpp  Program.hpp  SceneLoader.cpp  SceneLoader.hpp  System.cpp  System.hpp  main.cpp  stb_image.h  stb_image_write.h  tinygltf.h  types.cpp  types.hpp  vkRaster.hpp
src/rendering/: BindlessDescriptor.cpp  BindlessDescriptor.hpp  BufferWritter.cpp  BufferWritter.hpp  CommandsSubmitter.cpp  CommandsSubmitter.hpp  FrameData.cpp  FrameData.hpp  GPUOnlyVector.inl  GlobalBounds.cpp  GlobalBounds.hpp  GlobalRenderData.hpp  MeshHandler.cpp  MeshHandler.hpp  Renderer.cpp  Renderer.hpp  RendererImp.cpp  RendererImp.hpp  SceneState.cpp  SceneState.hpp  StorageGPUVector.hpp  StorageGPUVector.inl  Swapchain.cpp  Swapchain.hpp
src/rendering/passes/: CullingPass.cpp  CullingPass.hpp  ImGUIPass.cpp  ImGUIPass.hpp  LightCullingPass.cpp  LightCullingPass.hpp  PBRPass.cpp  PBRPass.hpp  UnlitPass.cpp  UnlitPass.hpp
src/rendering/renderers/: UnlitRenderer.cpp  UnlitRenderer.hpp
src/rendering/vk/: vkApp.cpp  vkApp.hpp  vkBuffer.cpp  vkBuffer.hpp  vkCommand.cpp  vkCommand.hpp  vkDeletion.cpp  vkDeletion.hpp  vkDescriptors.cpp  vkDescriptors.hpp  vkImage.cpp  vkImage.hpp  vkInit.cpp  vkInit.hpp  vkPipelines.cpp  vkPipelines.hpp  vkSync.cpp  vkSync.hpp  vkUtils.hpp
src/scene/: Scene.cpp  Scene.hpp
